[gd_scene load_steps=4 format=3 uid="uid://ssgmxn5726ui"]

[ext_resource type="Script" path="res://menu.gd" id="1_m47di"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e857p"]
corner_radius_top_left = 360
corner_radius_top_right = 360
corner_radius_bottom_right = 360
corner_radius_bottom_left = 360

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pppuk"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 1.0
offset_right = 3.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m47di")

[node name="PlayButton" type="Button" parent="."]
layout_mode = 2
offset_left = 45.0
offset_top = 86.0
offset_right = 225.0
offset_bottom = 266.0
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_e857p")
text = "Play"

[node name="ChapterButton" type="Button" parent="."]
layout_mode = 2
offset_left = 50.0
offset_top = 305.0
offset_right = 211.0
offset_bottom = 353.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_pppuk")
text = "Chapters"

[node name="OptionsButton" type="Button" parent="."]
layout_mode = 2
offset_left = 50.0
offset_top = 383.0
offset_right = 211.0
offset_bottom = 431.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_pppuk")
text = "Options"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 2
offset_left = 50.0
offset_top = 520.0
offset_right = 211.0
offset_bottom = 568.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_pppuk")
text = "Quit"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -135.5
offset_right = 135.5
offset_bottom = 81.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "Mantiscrab"
horizontal_alignment = 1

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="ChapterButton" to="." method="_on_chapter_button_pressed"]
[connection signal="pressed" from="OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
